--- a/GROUPWORK/fig14.1.html
+++ b/GROUPWORK/fig14.1.html
@@ -13,7 +13,7 @@
 
     .grid-line {
       stroke: #ccc;
-      stroke-dasharray: 4; 
+      stroke-dasharray: 4;
     }
   </style>
 </head>
@@ -48,6 +48,7 @@
     const line = d3.line()
       .x((d, i) => xScale(years[i]))
       .y(d => yScale(d));
+
     const gridLines = svg.selectAll(".grid-line")
       .data(yScale.ticks(5))
       .enter()
@@ -56,7 +57,8 @@
       .attr("x1", 0)
       .attr("x2", width)
       .attr("y1", d => yScale(d))
-      .attr("y2", d => yScale(d));  
+      .attr("y2", d => yScale(d));
+
     svg.selectAll(".dot-bev")
       .data(bevData)
       .enter()
@@ -76,12 +78,20 @@
       .attr("y", d => yScale(d) - 10)
       .text(d => d);
 
-    svg.append("path")
+    const bevPath = svg.append("path")
       .datum(bevData)
       .attr("fill", "none")
       .attr("stroke", "yellowgreen")
       .attr("stroke-width", 2)
       .attr("d", line);
+
+    // 添加折线的出场动画
+    bevPath
+      .attr("stroke-dasharray", bevPath.node().getTotalLength() + " " + bevPath.node().getTotalLength())
+      .attr("stroke-dashoffset", bevPath.node().getTotalLength())
+      .transition()
+      .duration(1000)
+      .attr("stroke-dashoffset", 0);
 
     svg.selectAll(".dot-phev")
       .data(phevData)
@@ -102,12 +112,20 @@
       .attr("y", d => yScale(d) - 10)
       .text(d => d);
 
-    svg.append("path")
+    const phevPath = svg.append("path")
       .datum(phevData)
       .attr("fill", "none")
       .attr("stroke", "darkgreen")
       .attr("stroke-width", 2)
       .attr("d", line);
+
+    // 添加折线的出场动画
+    phevPath
+      .attr("stroke-dasharray", phevPath.node().getTotalLength() + " " + phevPath.node().getTotalLength())
+      .attr("stroke-dashoffset", phevPath.node().getTotalLength())
+      .transition()
+      .duration(1000)
+      .attr("stroke-dashoffset", 0);
 
     svg.append("g")
       .attr("transform", `translate(0, ${height})`)
