--- a/GROUPWORK/C_Market.html
+++ b/GROUPWORK/C_Market.html
@@ -42,6 +42,11 @@
         <iframe id="chart-iframe-2" src="fig11.1.html" width="100%" height="100%"></iframe>
     </div>
 
+    <p style="position: absolute; top: 150px; left: 30px; right: 1000px;">
+        From 2011 to 2022, the electric vehicle market witnessed a significant shift, with the <strong>United States</strong> initially leading the way, followed by <strong>China</strong> surpassing the U.S. to become the world's largest electric vehicle market.
+    </p>
+    
+    
     <button id="chart-button">SALES BY BRAND Chart</button>
 
     <script>
