--- a/GROUPWORK/D_Future.html
+++ b/GROUPWORK/D_Future.html
@@ -36,5 +36,10 @@
         <iframe id="chart-iframe-2" src="fig13.1.html" width="100%" height="100%"></iframe>
     </div>
 
+    <p style="position: absolute; top: 730px; left: 60px; right: 820px;">
+        Projected EV sales in the world are expected to consistently rise through 2030, reflecting the growing global demand for electric vehicles, driven by factors such as <b><span style="color: green;">environmental concerns</span></b>, <b><span style="color: green;">government incentives</span></b>, <b><span style="color: green;">advancements in EV technology</span></b>, and <b><span style="color: green;">increasing consumer adoption of sustainable transportation options</span></b>.
+    </p>
+    
+    
 </body>
 </html>
