--- a/GROUPWORK/E_Conclusion.html
+++ b/GROUPWORK/E_Conclusion.html
@@ -62,12 +62,16 @@
         <iframe id="chart-iframe-4" src="icon2.svg" width="100%" height="100%"></iframe>
     </div>
 
-    <p style="position: absolute; top: 170px; left: 1490px; right: 70px;">
-        With the petrol price increases the United Kingdom has seen in 2022, filling your car's fuel tank costs, on average, £81.02.
-        Alternatively, even despite the electricity price increases, fully charging an electric car's battery would cost an average of £16.78. To normalise these figures, it costs on average £20.63 per 100 miles to fuel a petrol car and an average of £7.10 per 100 miles to charge an electric vehicle. This means there is a 190.37% price difference between these two averages, indicating that it would be cheaper to run an electric car in the UK. Globally, the UK ranked 30th for the highest price differences between fuel and electric cars, though countries such as Germany and Belgium had lower price differences. Ireland again ranked higher, with a slightly bigger price difference.
+    <p style="position: absolute; top: 250px; left: 1490px; right: 80px;color:rgb(8, 108, 40)">
+        Showing that it is <span style="font-size: 75px; color: green; font-weight: bold;">more economical</span> to run electric vehicles.
     </p>
-    <p style="position: absolute; top: 680px; left: 940px; right: 500px;">
-    EV purchasers get two types of incentives — the Vehicular Emissions Scheme (S$25,000) and the Electric Vehicle Early Adoption Incentive or EEAI (S$20,000). The combined value of S$45,000 is definitely a pull factor, as you're looking at a sweet S$45,000 off your total car purchase price! When it comes to the road tax though, Tesla's comes close to four times more than Kia Cerato's. 
+    
+    <p style="position: absolute; top: 690px; left: 940px; right: 200px;font-size: 18px;">
+    When it comes to the road tax though, Tesla's comes close to four times more than Kia Cerato's. 
     </p>
+    <p style="position: absolute; top: 710px; left: 940px; right: 170px;font-size: 18px;">
+    <span style="font-size: 30px; color: green; font-weight: bold;">BUT EV purchasers get two types of incentives:</span> The combined value of S$45,000 is definitely a pull factor, as a sweet S$45,000 off total car purchase price!  
+    </p>
+
 </body>
 </html>
