--- a/GROUPWORK/fig11.1.html
+++ b/GROUPWORK/fig11.1.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <h2>China leads global electric vehicle sales</h2>
-  <p>China accounts for more than half (58 percent) of all new electric cars sold worldwide today.</p>
+  <p><strong>China</strong> accounts for more than half (58 percent) of all new electric cars sold worldwide today.</p>
   <svg width="700" height="560"></svg>
 
   <script>
